[package]
name = "artemis-runtime"
description = "Artemis Runtime"
version = "0.1.1"
edition = "2018"
authors = ["Snowfork <contact@snowfork.com>"]
repository = "https://github.com/Snowfork/polkadot-ethereum"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# Third-party

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "1.3.4"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0.101"

[dependencies.hex-literal]
version = "0.3.1"
optional = true

# Substrate

[dependencies.frame-executive]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.frame-system]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.pallet-balances]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.pallet-randomness-collective-flip]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.pallet-timestamp]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.pallet-transaction-payment]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.sp-api]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.sp-block-builder]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.sp-inherents]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.sp-offchain]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.sp-session]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.sp-transaction-pool]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.sp-version]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.frame-benchmarking]
optional = true
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.frame-system-benchmarking]
optional = true
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

# Build

[build-dependencies.substrate-wasm-builder]
git = "https://github.com/paritytech/substrate.git"
branch = "master"
version = "3.0.0"

# Cumulus

[dependencies.cumulus-runtime]
default-features = false
git = "https://github.com/paritytech/cumulus"
branch = "master"

[dependencies.cumulus-parachain-upgrade]
default-features = false
git = "https://github.com/paritytech/cumulus"
branch = "master"

[dependencies.cumulus-primitives]
default-features = false
git = "https://github.com/paritytech/cumulus"
branch = "master"

[dependencies.cumulus-message-broker]
default-features = false
git = "https://github.com/paritytech/cumulus"
branch = "master"

[dependencies.parachain-info]
default-features = false
git = "https://github.com/paritytech/cumulus"
branch = "master"

# XCM

[dependencies.xcm]
default-features = false
git = "https://github.com/paritytech/polkadot"
branch = "master"

[dependencies.xcm-executor]
default-features = false
git = "https://github.com/paritytech/polkadot"
branch = "master"

[dependencies.xcm-builder]
default-features = false
git = "https://github.com/paritytech/polkadot"
branch = "master"

[dependencies.xcm-handler]
default-features = false
git = "https://github.com/paritytech/cumulus"
branch = "master"

[dependencies.polkadot-parachain]
default-features = false
git = "https://github.com/paritytech/polkadot"
branch = "master"

# Our Pallets

[dependencies.artemis-core]
default-features = false
package = "artemis-core"
path = "../primitives/core"

[dependencies.bridge]
default-features = false
package = "pallet-bridge"
path = "../pallets/bridge"

[dependencies.verifier]
default-features = false
package = "pallet-verifier"
path = "../pallets/verifier"

[dependencies.verifier-lightclient]
default-features = false
package = "pallet-verifier-lightclient"
path = "../pallets/verifier-lightclient"

[dependencies.assets]
default-features = false
package = "artemis-assets"
path = "../pallets/assets"

[dependencies.eth-app]
default-features = false
package = "artemis-eth-app"
path = "../pallets/eth-app"

[dependencies.erc20-app]
default-features = false
package = "artemis-erc20-app"
path = "../pallets/erc20-app"

[dependencies.commitments]
default-features = false
package = "artemis-commitments"
path = "../pallets/commitments"

[dependencies.artemis-token-dealer]
default-features = false
path = "../pallets/token-dealer"

[dependencies.artemis-xcm-support]
default-features = false
path = "../primitives/xcm-support"

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "pallet-balances/std",
    "pallet-randomness-collective-flip/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
	"cumulus-runtime/std",
	"cumulus-parachain-upgrade/std",
	"cumulus-primitives/std",
	"cumulus-message-broker/std",
	"parachain-info/std",
	"xcm/std",
	"xcm-executor/std",
	"xcm-builder/std",
	"xcm-handler/std",
	"polkadot-parachain/std",
    "bridge/std",
    "verifier/std",
    "verifier-lightclient/std",
    "assets/std",
    "eth-app/std",
    "erc20-app/std",
    "commitments/std",
    "artemis-token-dealer/std",
    "artemis-xcm-support/std"
]

runtime-benchmarks = [
	"sp-runtime/runtime-benchmarks",
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"hex-literal",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
]
