[package]
name = "artemis-runtime"
description = "Artemis Runtime"
version = "0.1.1"
edition = "2018"
authors = ["Snowfork <contact@snowfork.com>"]
repository = "https://github.com/Snowfork/polkadot-ethereum"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.6", features = ["derive"], default-features = false }
getrandom = { version = "0.2.1", features = ["js"] }
hex-literal = { version = "0.3.1", default-features = false }

frame-executive = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }

cumulus-runtime = { git = "https://github.com/paritytech/cumulus.git", branch = "rococo-v1", default-features = false }
cumulus-parachain-upgrade = { git = "https://github.com/paritytech/cumulus.git", branch = "rococo-v1", default-features = false }
cumulus-primitives = { git = "https://github.com/paritytech/cumulus.git", branch = "rococo-v1", default-features = false }
cumulus-message-broker = { git = "https://github.com/paritytech/cumulus.git", branch = "rococo-v1", default-features = false }
parachain-info = { git = "https://github.com/paritytech/cumulus.git", branch = "rococo-v1", default-features = false }

xcm = { git = "https://github.com/paritytech/polkadot.git", branch = "rococo-v1", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot.git", branch = "rococo-v1", default-features = false }
xcm-builder = { git = "https://github.com/paritytech/polkadot.git", branch = "rococo-v1", default-features = false }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot.git", branch = "rococo-v1", default-features = false }
xcm-handler = { git = "https://github.com/paritytech/cumulus.git", branch = "rococo-v1", default-features = false }

artemis-core = { path = "../primitives/core", default-features = false }
artemis-token-dealer = { path = "../pallets/token-dealer", default-features = false }
artemis-xcm-support = { path = "../primitives/xcm-support", default-features = false }
bridge = { path = "../pallets/bridge", package = "pallet-bridge", default-features = false }
verifier-lightclient = { path = "../pallets/verifier-lightclient", package = "pallet-verifier-lightclient", default-features = false }
assets = { path = "../pallets/assets", package = "artemis-assets", default-features = false }
eth-app = { path = "../pallets/eth-app", package = "artemis-eth-app", default-features = false }
erc20-app = { path = "../pallets/erc20-app", package = "artemis-erc20-app", default-features = false }
commitments = { path = "../pallets/commitments", package = "artemis-commitments", default-features = false }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0" }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "pallet-balances/std",
    "pallet-randomness-collective-flip/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
	"cumulus-runtime/std",
	"cumulus-parachain-upgrade/std",
	"cumulus-primitives/std",
	"cumulus-message-broker/std",
	"parachain-info/std",
	"xcm/std",
	"xcm-executor/std",
	"xcm-builder/std",
	"xcm-handler/std",
	"polkadot-parachain/std",
    "bridge/std",
    "verifier-lightclient/std",
    "assets/std",
    "eth-app/std",
    "erc20-app/std",
    "commitments/std",
    "artemis-token-dealer/std",
    "artemis-xcm-support/std"
]
test-e2e = []
