[package]
name = "sp1-beefy-client"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10"
sha2 = "0.10"
k256 = { version = "0.13", features = ["ecdsa"] }

[build-dependencies]
sp1-build = { git = "https://github.com/succinctlabs/sp1.git" }
