[package]
name = "sp1-beefy-client-script"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"

[build-dependencies]
sp1-build = { git = "https://github.com/succinctlabs/sp1.git" }