[package]
name = "bridge-hub-polkadot-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false }
scale-info = { version = "2.9.0", default-features = false, features = [
    "derive",
] }
serde = { version = "1.0.197", features = ["derive"] }
subxt = { version = "0.35.1", features = ["substrate-compat"] }
snowbridge-beacon-primitives = "0.2.0"
sp-arithmetic = "24.0.0"
