[package]
name = "bridge-hub-rococo-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
subxt = { version = "0.34.0", features = ["substrate-compat"] }
