[package]
name = "asset-hub-westend-local-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.7.4", default-features = false }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
subxt = { version = "0.42.1" }
sp-arithmetic = "26.1.0"
