[package]
name = "snowbridge-asset-registry"
description = "Snowbridge Counter Pallet"
version = "0.1.1"
edition = "2021"
authors = [ "Snowfork <contact@snowfork.com>" ]
repository = "https://github.com/Snowfork/snowbridge"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
codec = { version = "3.0.0", package = "parity-scale-codec", features = [ "derive" ], default-features = false }
scale-info = { version = "2.2.0", default-features = false, features = [ "derive" ] }

frame-support = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.30" }
frame-system = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.30" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30", default-features = false }

snowbridge-asset-registry-primitives = { path = "../../primitives/asset-registry", default-features = false }

[dev-dependencies]
serde = { version = "1.0.137" }
sp-core = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.30" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.30" }
sp-io = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.30" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"snowbridge-asset-registry-primitives/std"
]
