[package]
name = "artemis-assets"
version = "0.1.1"
authors = ["Snowfork <contact@snowfork.com>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "1.3.4"

[dependencies.serde]
package = "serde"
optional = true
version = "1.0.101"
features = ["derive"]

[dependencies.hex]
package = "rustc-hex"
default-features = false
version = "2.1.0"

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v2.0.0-rc6"

[dependencies.frame-system]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v2.0.0-rc6"

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v2.0.0-rc6"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v2.0.0-rc6"

[dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v2.0.0-rc6"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v2.0.0-rc6"

[dev-dependencies.sp-keyring]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v2.0.0-rc6"

[dependencies.artemis-core]
default-features = false
path = "../../primitives/core"

[features]
default = ["std"]
std = [
    "hex/std",
    "serde/std",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-std/std",
    "sp-io/std",
    "sp-runtime/std",
    "artemis-core/std"
]
