[package]
name = "artemis-rialto-channel"
description = "Artemis Rialto Channel"
version = "0.1.1"
edition = "2018"
authors = ["Snowfork <contact@snowfork.com>"]
repository = "https://github.com/Snowfork/polkadot-ethereum"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }

artemis-core = { path = "../../primitives/core", default-features = false }
artemis-ethereum = { path = "../../primitives/ethereum", default-features = false }
ethabi = { git = "https://github.com/Snowfork/ethabi-decode.git", package = "ethabi-decode", branch = "master", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "artemis-core/std",
    "artemis-ethereum/std",
    "ethabi/std"
]
