[package]
name = "snowbridge-basic-channel"
description = "Snowbridge Basic Channel"
version = "0.1.1"
edition = "2021"
authors = [ "Snowfork <contact@snowfork.com>" ]
repository = "https://github.com/Snowfork/snowbridge"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
serde = { version = "1.0.136", optional = true }
codec = { version = "3.0.0", package = "parity-scale-codec", default-features = false, features = [ "derive" ] }
scale-info = { version = "2.0.1", default-features = false, features = [ "derive" ] }
hex-literal = { version = "0.3.4", optional = true }
rlp = { version = "0.5", default-features = false, optional = true }
hex = { version = "0.4", default-features = false, optional = true }
log = { version = "0.4", default-features = false, optional = true }

frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }

snowbridge-core = { path = "../../primitives/core", default-features = false }
snowbridge-ethereum = { path = "../../primitives/ethereum", default-features = false }
snowbridge-basic-channel-rpc = { path = "rpc" }
snowbridge-basic-channel-merkle-proof = { path = "merkle-proof" }
ethabi = { git = "https://github.com/Snowfork/ethabi-decode.git", package = "ethabi-decode", branch = "master", default-features = false }

[dev-dependencies]
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
hex-literal = { version = "0.3.4" }
rlp = { version = "0.5" }
env_logger = "0.9"
hex = "0.4"

[features]
default = [ "debug", "std" ]
debug = ["hex", "hex/std", "log"]
std = [
    "serde",
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
    "snowbridge-core/std",
    "snowbridge-ethereum/std",
    "ethabi/std"
]
runtime-benchmarks = [
    "snowbridge-core/runtime-benchmarks",
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "hex-literal",
    "rlp"
]
