[package]
name = "pallet-bridge"
description = "Artemis Bridge Pallet"
version = "0.1.1"
edition = "2018"
authors = ["Snowfork <contact@snowfork.com>"]
repository = "https://github.com/Snowfork/polkadot-ethereum"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { version = "1.3.6", package = "parity-scale-codec", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }

artemis-core = { path = "../../primitives/core", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "artemis-core/std"
]
