[package]
name = "artemis-commitments"
version = "0.1.0"
authors = ["Snowfork <contact@snowfork.com>"]
repository = "https://github.com/Snowfork/polkadot-ethereum"
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "1.3.5"

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.frame-system]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "c9d93653e567f10867273b0171f3025419795c37"

[dependencies.artemis-core]
default-features = false
path = "../../primitives/core"

[dependencies.ethabi]
package = "ethabi-decode"
default-features = false
git = "https://github.com/Snowfork/ethabi-decode"

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "artemis-core/std",
    "ethabi/std"
]
